--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "posts"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "",
+    "dev:back": "npm run dev --workspace=posts",
+    "dev:front": "npm run dev --workspace=frontend",
+    "build": "npm run dev --workspace=frontend "
   },
   "keywords": [],
   "author": "",
