--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.25.0"
+  }
 }
